#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

JG-2011-05-31-1: Enhancem.:   mark reporting_params log_consumables as
                              deprecated in the man page sge_conf.5
                 Issue:       GE-3497
                 Review:      EB

JG-2011-05-31-0: Bugfix:      o workaround optimizer bug of Sun Studio 9 on
                                Solaris Sparc 64
                              o fix building with gcc on Solaris
                 Issue:       GE-3468
                 Review:      EB

HP-2011-05-27-0: Bugfix:      PDC_INTERVAL=NEVER does not work
                 Issue:       GE-3474
                 Review:      EB

EB-2011-05-26-0: Bugfix:      clone upgrade might fail if master host is 
                              referenced in host_aliases file.
                 Issue:       GE-3481
                 Review:      DG

JG-2011-05-25-0: Enhancem.:   try to detect location of libc.so.6 on Linux in
                              arch script
                 Issue:       GE-3467
                 Review:      SH

SH-2011-05-25-0: Bugfix:      Read from stderr even if stdout is already closed
                              (IJS)
                 Issue:       GE-3190
                 Review:      SH

HP-2011-05-25-0: Bugfix:      on Windows, the loadcheck.exe binary output
                              misses a line break
                 Issue:       GE-3503
                 Review:      SH

SH-2011-05-19-0: Bugfix:      use absolute pathnames for dynamically opening
                              openssl-libraries instead of just the lib-name
                 Issue:       GE-3464